# linux-scripting-lab

./: CMakeLists.txt
BASH-scripts/: bw.txt  filechanger.sh  lab1bash.sh
BASH-scripts/test-files/: test.cc  test.h  test.txt
linux program/: processinfo  processinfo.cpp  workspace.code-workspace
linux-program/: CMakeLists.txt  a.out  processinfo  processinfo.cpp  processinfoconfig.h.in  readme.txt  workspace.code-workspace
